--- a/media/css/fonts.css
+++ b/media/css/fonts.css
@@ -1,30 +1,82 @@
-/*@import "compass/support";  // Add Compass' IE and vendor prefix support variables.
-@import "compass/utilities/general/clearfix"; // Better than Drupal's clearfix.
-@import "compass/utilities/sprites"; // See http://compass-style.org/help/tutorials/spriting/
-@import "compass/css3";     // Use one CSS3 mixin instead of multiple vendor prefixes.
-@import "compass/typography/vertical_rhythm"; // Helps set up a vertical rhythm.
-@import "zen";              // Add the Zen Grids responsive layout mixins.
+/*
+Syntax error: File to import not found or unreadable: merdia-queries.
+              Load paths:
+                E:/htdocs/skeyler/media/scss
+                C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/frameworks/blueprint/stylesheets
+                C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/frameworks/compass/stylesheets
+                C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/animation-0.1.alpha.3/stylesheets
+                Compass::SpriteImporter
+        on line 102 of E:/htdocs/skeyler/media/scss/_base.scss
+        from line 1 of E:/htdocs/skeyler/media/scss/fonts.scss
+
+Backtrace:
+E:/htdocs/skeyler/media/scss/_base.scss:102
+E:/htdocs/skeyler/media/scss/fonts.scss:1
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/import_node.rb:67:in `rescue in import'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/import_node.rb:45:in `import'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/import_node.rb:28:in `imported_file'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/import_node.rb:37:in `css_import?'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/perform.rb:217:in `visit_import'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/base.rb:37:in `visit'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/perform.rb:100:in `visit'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/perform.rb:227:in `block in visit_import'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/perform.rb:227:in `map'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/perform.rb:227:in `visit_import'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/base.rb:37:in `visit'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/perform.rb:100:in `visit'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/base.rb:53:in `block in visit_children'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/base.rb:53:in `map'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/perform.rb:109:in `block in visit_children'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/perform.rb:121:in `with_environment'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/perform.rb:108:in `visit_children'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/base.rb:37:in `block in visit'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/perform.rb:128:in `visit_root'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/base.rb:37:in `visit'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/perform.rb:100:in `visit'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/visitors/perform.rb:7:in `visit'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/tree/root_node.rb:20:in `render'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/engine.rb:315:in `_render'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/sass-3.2.14/lib/sass/engine.rb:262:in `render'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/compiler.rb:140:in `block (2 levels) in compile'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/compiler.rb:126:in `timed'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/compiler.rb:139:in `block in compile'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/logger.rb:45:in `red'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/compiler.rb:138:in `compile'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/compiler.rb:118:in `compile_if_required'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/compiler.rb:103:in `block (2 levels) in run'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/compiler.rb:101:in `each'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/compiler.rb:101:in `block in run'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/compiler.rb:126:in `timed'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/compiler.rb:100:in `run'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/commands/watch_project.rb:147:in `recompile'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/fssm-0.2.10/lib/fssm/path.rb:73:in `call'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/fssm-0.2.10/lib/fssm/path.rb:73:in `run_callback'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/fssm-0.2.10/lib/fssm/path.rb:55:in `callback_action'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/fssm-0.2.10/lib/fssm/path.rb:35:in `update'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/fssm-0.2.10/lib/fssm/state/directory.rb:39:in `block in modified'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/fssm-0.2.10/lib/fssm/state/directory.rb:37:in `each'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/fssm-0.2.10/lib/fssm/state/directory.rb:37:in `modified'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/fssm-0.2.10/lib/fssm/state/directory.rb:18:in `refresh'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:17:in `block (2 levels) in run'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:17:in `each'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:17:in `block in run'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:15:in `loop'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/fssm-0.2.10/lib/fssm/backends/polling.rb:15:in `run'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/fssm-0.2.10/lib/fssm/monitor.rb:26:in `run'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/fssm-0.2.10/lib/fssm.rb:70:in `monitor'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/commands/watch_project.rb:87:in `perform'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/commands/base.rb:18:in `execute'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/commands/project_base.rb:19:in `execute'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/exec/sub_command_ui.rb:43:in `perform!'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/lib/compass/exec/sub_command_ui.rb:15:in `run!'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/bin/compass:30:in `block in <top (required)>'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/bin/compass:44:in `call'
+C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/bin/compass:44:in `<top (required)>'
+C:/Program Files/Ruby200-x64/bin/compass:23:in `load'
+C:/Program Files/Ruby200-x64/bin/compass:23:in `<main>'
 */
-@font-face {
-  font-family: 'Arvil Sans';
-  src: url("../fonts/arvil_sans-webfont.eot");
-  src: url("../fonts/arvil_sans-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/arvil_sans-webfont.woff") format("woff"), url("../fonts/arvil_sans-webfont.ttf") format("truetype"), url("../fonts/arvil_sans-webfont.svg#arvil_sansregular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'UniversLTStd';
-  src: url("fonts/UniversLTStd.eot");
-  src: url("fonts/UniversLTStd.eot?#iefix") format("embedded-opentype"), url("fonts/UniversLTStd.woff") format("woff"), url("fonts/UniversLTStd.ttf") format("truetype"), url("fonts/UniversLTStd.svg") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Helvetica Condensed Bold';
-  src: url("../fonts/HelveticaLTStd-BoldCond.eot");
-  src: url("../fonts/HelveticaLTStd-BoldCond.eot?#iefix") format("embedded-opentype"), url("../fonts/HelveticaLTStd-BoldCond.woff") format("woff"), url("../fonts/HelveticaLTStd-BoldCond.ttf") format("truetype"), url("../fonts/HelveticaLTStd-BoldCond.svg") format("svg");
-  font-weight: bold;
-  font-style: normal;
-}
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Syntax error: File to import not found or unreadable: merdia-queries.\A               Load paths:\A                 E:/htdocs/skeyler/media/scss\A                 C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/frameworks/blueprint/stylesheets\A                 C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/compass-0.12.3/frameworks/compass/stylesheets\A                 C:/Program Files/Ruby200-x64/lib/ruby/gems/2.0.0/gems/animation-0.1.alpha.3/stylesheets\A                 Compass::SpriteImporter\A         on line 102 of E:/htdocs/skeyler/media/scss/_base.scss\A         from line 1 of E:/htdocs/skeyler/media/scss/fonts.scss"; }
