--- a/media/css/main.css
+++ b/media/css/main.css
@@ -11,19 +11,26 @@ body {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   padding: 0;
 }
+@media screen and (max-width: 800px) {
+  /* line 3, ../scss/main.scss */
+  body {
+    -moz-text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+  }
+}
 
-/* line 9, ../scss/main.scss */
+/* line 14, ../scss/main.scss */
 a {
   color: #25bfff;
 }
 
-/* line 13, ../scss/main.scss */
+/* line 18, ../scss/main.scss */
 #container {
   width: 900px;
   margin: 0 auto;
   text-align: left;
 }
-/* line 18, ../scss/main.scss */
+/* line 23, ../scss/main.scss */
 #container:before {
   content: '';
   display: block;
@@ -44,7 +51,7 @@ a {
   z-index: -1;
 }
 
-/* line 33, ../scss/main.scss */
+/* line 38, ../scss/main.scss */
 .alert {
   margin-bottom: 1em;
   padding: 12px 15px;
@@ -56,13 +63,13 @@ a {
   border-radius: 0;
 }
 
-/* line 40, ../scss/main.scss */
+/* line 45, ../scss/main.scss */
 .alert-success {
   background: url(../images/noiseGreen.png) repeat left center #a6d95d;
   clear: both;
   color: #fff;
 }
-/* line 51, ../scss/main.scss */
+/* line 56, ../scss/main.scss */
 .alert-success:before {
   background: url(../images/noiseNotice.png) no-repeat left center;
   content: '';
@@ -71,13 +78,13 @@ a {
   height: 17px;
   vertical-align: text-bottom;
 }
-/* line 63, ../scss/main.scss */
+/* line 68, ../scss/main.scss */
 .alert-success a {
   text-decoration: underline;
   color: #fff;
 }
 
-/* line 69, ../scss/main.scss */
+/* line 74, ../scss/main.scss */
 .content {
   background: url(../images/noiseGreyMedium.png) repeat left center #f3f3f3;
   border: 1px solid #dfdfdf;
@@ -88,12 +95,12 @@ a {
   position: relative;
 }
 
-/* line 79, ../scss/main.scss */
+/* line 84, ../scss/main.scss */
 .clr {
   clear: both;
 }
 
-/* line 83, ../scss/main.scss */
+/* line 88, ../scss/main.scss */
 h2 {
   padding: 0;
   margin: 0 0 0.5em 0;
@@ -102,17 +109,17 @@ h2 {
   color: #555;
   font-size: 1.8em;
 }
-/* line 91, ../scss/main.scss */
+/* line 96, ../scss/main.scss */
 h2 a {
   color: #767676;
 }
 
-/* line 96, ../scss/main.scss */
+/* line 101, ../scss/main.scss */
 h2, h3 {
   font-weight: bold;
 }
 
-/* line 100, ../scss/main.scss */
+/* line 105, ../scss/main.scss */
 ul.pageNav {
   display: inline-block;
   color: #7d7d7d;
@@ -121,33 +128,33 @@ ul.pageNav {
   padding: 0;
   font-weight: bold;
 }
-/* line 108, ../scss/main.scss */
+/* line 113, ../scss/main.scss */
 ul.pageNav.right {
   float: right;
   position: relative;
   left: 18px;
 }
-/* line 113, ../scss/main.scss */
+/* line 118, ../scss/main.scss */
 ul.pageNav.right li {
   padding: 0 0 0 0.5em;
 }
-/* line 118, ../scss/main.scss */
+/* line 123, ../scss/main.scss */
 ul.pageNav li {
   display: inline-block;
   padding: 0 0.5em 0 0;
   font-size: 0.8em;
 }
-/* line 123, ../scss/main.scss */
+/* line 128, ../scss/main.scss */
 ul.pageNav li a {
   color: #7d7d7d;
 }
-/* line 127, ../scss/main.scss */
+/* line 132, ../scss/main.scss */
 ul.pageNav li a:hover {
   background: url(../images/noiseBlue.png) repeat left center #25bfff;
   text-decoration: none;
   color: #fff;
 }
-/* line 134, ../scss/main.scss */
+/* line 139, ../scss/main.scss */
 ul.pageNav li a, ul.pageNav li span {
   display: inline-block;
   padding: 0.5em 0.75em;
@@ -157,20 +164,20 @@ ul.pageNav li a, ul.pageNav li span {
   -o-border-radius: 0.5em;
   border-radius: 0.5em;
 }
-/* line 140, ../scss/main.scss */
+/* line 145, ../scss/main.scss */
 ul.pageNav li.firstPage a:before {
   content: '<< ';
 }
-/* line 143, ../scss/main.scss */
+/* line 148, ../scss/main.scss */
 ul.pageNav li.lastPage a:after {
   content: ' >>';
 }
-/* line 147, ../scss/main.scss */
+/* line 152, ../scss/main.scss */
 ul.pageNav li.curPage span {
   background: url(../images/noiseGreyDark.png) repeat left center #dddddd;
 }
 
-/* line 192, ../scss/main.scss */
+/* line 197, ../scss/main.scss */
 .tag-reg, .tag-vip, .tag-mod, .tag-admin, .tag-dev, .tag-super, .tag-owner {
   color: #fff !important;
   text-shadow: 0 0 3px #000, 0 0 3px #000, 0 0 3px #000;
@@ -179,104 +186,104 @@ ul.pageNav li.curPage span {
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
   font-family: 'Helvetica Condensed Bold';
 }
-/* line 201, ../scss/main.scss */
+/* line 206, ../scss/main.scss */
 .tag-reg:hover, .tag-vip:hover, .tag-mod:hover, .tag-admin:hover, .tag-dev:hover, .tag-super:hover, .tag-owner:hover {
   text-decoration: none;
   outline: 2px solid #909090;
 }
 
-/* line 207, ../scss/main.scss */
+/* line 212, ../scss/main.scss */
 .tag-reg {
   background: gainsboro;
   text-shadow: 1px 1px 2px #000, 0 0 2px #000;
 }
 
-/* line 212, ../scss/main.scss */
+/* line 217, ../scss/main.scss */
 .tag-vip {
   background: #ffe555;
 }
-/* line 215, ../scss/main.scss */
+/* line 220, ../scss/main.scss */
 .tag-vip:hover {
   outline: 2px solid #bb9e00;
 }
 
-/* line 220, ../scss/main.scss */
+/* line 225, ../scss/main.scss */
 .tag-mod {
   background: #bdf04f;
 }
-/* line 222, ../scss/main.scss */
+/* line 227, ../scss/main.scss */
 .tag-mod:hover {
   outline: 2px solid #6d990d;
 }
 
-/* line 227, ../scss/main.scss */
+/* line 232, ../scss/main.scss */
 .tag-admin {
   background: #ff5555;
 }
-/* line 229, ../scss/main.scss */
+/* line 234, ../scss/main.scss */
 .tag-admin:hover {
   outline: 2px solid #bb0000;
 }
 
-/* line 234, ../scss/main.scss */
+/* line 239, ../scss/main.scss */
 .tag-dev {
   background: #45c0ff;
 }
-/* line 236, ../scss/main.scss */
+/* line 241, ../scss/main.scss */
 .tag-dev:hover {
   outline: 2px solid #0071ab;
 }
 
-/* line 241, ../scss/main.scss */
+/* line 246, ../scss/main.scss */
 .tag-super {
   background: #b156ff;
 }
-/* line 243, ../scss/main.scss */
+/* line 248, ../scss/main.scss */
 .tag-super:hover {
   outline: 2px solid #6500bc;
 }
 
-/* line 248, ../scss/main.scss */
+/* line 253, ../scss/main.scss */
 .tag-owner {
   background: #3c3c3c;
 }
-/* line 250, ../scss/main.scss */
+/* line 255, ../scss/main.scss */
 .tag-owner:hover {
   outline: 2px solid black;
 }
 
-/* line 255, ../scss/main.scss */
+/* line 260, ../scss/main.scss */
 .rankTag {
   padding: 0 0.5em;
 }
-/* line 258, ../scss/main.scss */
+/* line 263, ../scss/main.scss */
 .rankTag:hover {
   outline: 0;
 }
-/* line 262, ../scss/main.scss */
+/* line 267, ../scss/main.scss */
 .rankTag.shortName {
   text-transform: uppercase;
 }
 
-/* line 267, ../scss/main.scss */
+/* line 272, ../scss/main.scss */
 .breadcrumbs {
   margin: 0;
   padding: 0;
   display: inline-block;
   float: left;
 }
-/* line 273, ../scss/main.scss */
+/* line 278, ../scss/main.scss */
 .breadcrumbs li {
   display: inline-block;
   list-style: none;
   padding: 0 1em 0 0;
 }
-/* line 278, ../scss/main.scss */
+/* line 283, ../scss/main.scss */
 .breadcrumbs li a {
   color: #25bfff;
   display: inline-block;
 }
-/* line 282, ../scss/main.scss */
+/* line 287, ../scss/main.scss */
 .breadcrumbs li ~ li:before {
   content: '>';
   color: #555;
@@ -288,7 +295,7 @@ ul.pageNav li.curPage span {
   vertical-align: middle;
 }
 
-/* line 296, ../scss/main.scss */
+/* line 301, ../scss/main.scss */
 #chatbox .chats {
   font-size: 0.8em;
   border: 1px solid #d8d8d8;
@@ -304,26 +311,26 @@ ul.pageNav li.curPage span {
   overflow-x: hidden;
   background: url(../images/noiseWhite.png) repeat left center white;
 }
-/* line 310, ../scss/main.scss */
+/* line 315, ../scss/main.scss */
 #chatbox .chat ~ .chat {
   margin-top: 0.25em;
 }
-/* line 314, ../scss/main.scss */
+/* line 319, ../scss/main.scss */
 #chatbox .chat a.userLink {
   display: inline-block;
   font-family: Helvetica, serif;
   font-weight: bold;
   font-size: 0.8em;
 }
-/* line 331, ../scss/main.scss */
+/* line 336, ../scss/main.scss */
 #chatbox .chat-date {
   font-style: italic;
 }
-/* line 335, ../scss/main.scss */
+/* line 340, ../scss/main.scss */
 #chatbox .chat ~ .chat-date {
   margin-top: 1em;
 }
-/* line 339, ../scss/main.scss */
+/* line 344, ../scss/main.scss */
 #chatbox input {
   width: 100%;
   border: 1px solid #d8d8d8;
@@ -338,7 +345,7 @@ ul.pageNav li.curPage span {
   border-radius: 0 0 0.5em 0.5em;
 }
 
-/* line 349, ../scss/main.scss */
+/* line 354, ../scss/main.scss */
 .dimensions {
   position: absolute;
   display: inline-block;
@@ -348,17 +355,17 @@ ul.pageNav li.curPage span {
   padding: 0.5em;
   font-size: 0.8em;
 }
-/* line 358, ../scss/main.scss */
+/* line 363, ../scss/main.scss */
 .dimensions:hover {
   color: #fff;
 }
 
-/* line 363, ../scss/main.scss */
+/* line 368, ../scss/main.scss */
 .tinyImage {
   border: 2px solid #a54;
   cursor: pointer;
 }
-/* line 367, ../scss/main.scss */
+/* line 372, ../scss/main.scss */
 .tinyImage.expanded {
   max-width: none;
   position: relative;
@@ -372,7 +379,7 @@ ul.pageNav li.curPage span {
   margin-left: -64px;
 }
 
-/* line 378, ../scss/main.scss */
+/* line 383, ../scss/main.scss */
 .missing42 {
   width: 42px;
   height: 42px;
@@ -380,7 +387,7 @@ ul.pageNav li.curPage span {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACoAAAAqAQMAAAD/DVsYAAAABlBMVEX4APgAAAAfdBzzAAAAJUlEQVR4Xs3OoQEAAARFwScZy+p/LAlDEKSrB5HW2tLyghselgat1Xgl/EfvxwAAAABJRU5ErkJggg==") no-repeat;
 }
 
-/* line 385, ../scss/main.scss */
+/* line 390, ../scss/main.scss */
 .missing52 {
   width: 42px;
   height: 42px;
@@ -388,22 +395,22 @@ ul.pageNav li.curPage span {
   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAADQAAAA0AQMAAAD/tomoAAAABlBMVEX4APgAAAAfdBzzAAAAKUlEQVR4Xt3PQQkAAAjAwIEBjGR1IxlAUEvoQxjce6DlUrHmZAlXfvtpTQiymQ2xdWAAAAAASUVORK5CYII=") no-repeat;
 }
 
-/* line 394, ../scss/main.scss */
+/* line 399, ../scss/main.scss */
 .modButton.active {
   background: url(../images/noiseBlue.png) repeat left center #25bfff;
   z-index: 1000;
 }
 
-/* line 401, ../scss/main.scss */
+/* line 406, ../scss/main.scss */
 .modDropdown {
   display: inline-block;
   position: relative;
 }
-/* line 405, ../scss/main.scss */
+/* line 410, ../scss/main.scss */
 .modDropdown:hover {
   background: url(../images/noiseBlackLight.png) repeat left center #636363;
 }
-/* line 426, ../scss/main.scss */
+/* line 431, ../scss/main.scss */
 .modDropdown ul {
   display: none;
   position: absolute;
@@ -416,7 +423,7 @@ ul.pageNav li.curPage span {
   text-align: left;
   background: #222;
 }
-/* line 440, ../scss/main.scss */
+/* line 445, ../scss/main.scss */
 .modDropdown ul li a {
   color: #fff;
   display: block;
@@ -425,12 +432,12 @@ ul.pageNav li.curPage span {
   background: url(../images/noiseBlack.png) repeat left center #3b3b3b;
   line-height: 32px;
 }
-/* line 448, ../scss/main.scss */
+/* line 453, ../scss/main.scss */
 .modDropdown ul li a:hover {
   background: url(../images/noiseBlue.png) repeat left center #25bfff;
   text-decoration: none;
 }
-/* line 454, ../scss/main.scss */
+/* line 459, ../scss/main.scss */
 .modDropdown ul li.userActions {
   padding: 0 16px;
   line-height: 32px;
@@ -438,19 +445,19 @@ ul.pageNav li.curPage span {
   font-weight: bold;
   white-space: nowrap;
 }
-/* line 464, ../scss/main.scss */
+/* line 469, ../scss/main.scss */
 .modDropdown ul.mod-thread a {
   padding: 0 0.5em 0 0;
 }
 
 @-moz-keyframes spin {
-  /* line 473, ../scss/main.scss */
+  /* line 478, ../scss/main.scss */
   from {
     -moz-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 476, ../scss/main.scss */
+  /* line 481, ../scss/main.scss */
   to {
     -moz-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -458,13 +465,13 @@ ul.pageNav li.curPage span {
 }
 
 @-webkit-keyframes spin {
-  /* line 473, ../scss/main.scss */
+  /* line 478, ../scss/main.scss */
   from {
     -webkit-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 476, ../scss/main.scss */
+  /* line 481, ../scss/main.scss */
   to {
     -webkit-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -472,13 +479,13 @@ ul.pageNav li.curPage span {
 }
 
 @-o-keyframes spin {
-  /* line 473, ../scss/main.scss */
+  /* line 478, ../scss/main.scss */
   from {
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 476, ../scss/main.scss */
+  /* line 481, ../scss/main.scss */
   to {
     -o-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -486,13 +493,13 @@ ul.pageNav li.curPage span {
 }
 
 @-ms-keyframes spin {
-  /* line 473, ../scss/main.scss */
+  /* line 478, ../scss/main.scss */
   from {
     -ms-transform: rotate(0deg);
     transform: rotate(0deg);
   }
 
-  /* line 476, ../scss/main.scss */
+  /* line 481, ../scss/main.scss */
   to {
     -ms-transform: rotate(360deg);
     transform: rotate(360deg);
@@ -500,18 +507,18 @@ ul.pageNav li.curPage span {
 }
 
 @keyframes spin {
-  /* line 473, ../scss/main.scss */
+  /* line 478, ../scss/main.scss */
   from {
     transform: rotate(0deg);
   }
 
-  /* line 476, ../scss/main.scss */
+  /* line 481, ../scss/main.scss */
   to {
     transform: rotate(360deg);
   }
 }
 
-/* line 481, ../scss/main.scss */
+/* line 486, ../scss/main.scss */
 .popupContainer {
   text-align: center;
   position: fixed;
@@ -524,7 +531,7 @@ ul.pageNav li.curPage span {
   z-index: 9998;
 }
 
-/* line 493, ../scss/main.scss */
+/* line 498, ../scss/main.scss */
 .popup {
   padding: 1em;
   width: 80%;
@@ -536,34 +543,34 @@ ul.pageNav li.curPage span {
   background: #eee;
 }
 
-/* line 504, ../scss/main.scss */
+/* line 509, ../scss/main.scss */
 .popupCloseLink {
   font-size: 0.75em;
 }
-/* line 507, ../scss/main.scss */
+/* line 512, ../scss/main.scss */
 .popupCloseLink:before {
   margin-top: 2em;
   content: '\a';
   display: block;
 }
 
-/* line 514, ../scss/main.scss */
+/* line 519, ../scss/main.scss */
 table {
   width: 100%;
 }
 
-/* line 522, ../scss/main.scss */
+/* line 527, ../scss/main.scss */
 a[target="_blank"]:after {
   content: " " url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKBAMAAAB/HNKOAAAAD1BMVEX///////////////////+Rd1MVAAAABHRSTlMAaeRqY+AomwAAADNJREFUeF4lxIEJACAMBLErdACRjuIAX/n9Z7IghEDYhlwkcGe7Z+Xac4cLnVKjkOCzLR6tNQaTLNDT1wAAAABJRU5ErkJggg==");
   white-space: pre;
 }
 
-/* line 528, ../scss/main.scss */
+/* line 533, ../scss/main.scss */
 a.sprite[target="_blank"]:after {
   display: none;
 }
 
-/* line 532, ../scss/main.scss */
+/* line 537, ../scss/main.scss */
 .login {
   width: 154px;
   height: 23px;
@@ -574,7 +581,7 @@ a.sprite[target="_blank"]:after {
   color: transparent;
 }
 
-/* line 542, ../scss/main.scss */
+/* line 547, ../scss/main.scss */
 .curse {
   font-weight: bold;
   -webkit-filter: blur(1px);
@@ -584,7 +591,7 @@ a.sprite[target="_blank"]:after {
   text-shadow: 0 0 0.25em #ccc, 0 0 0.5em #ccc;
 }
 
-/* line 549, ../scss/main.scss */
+/* line 554, ../scss/main.scss */
 input {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   border-style: solid;
@@ -597,7 +604,7 @@ input {
   border-width: 2px 0px 0px 1px;
 }
 
-/* line 554, ../scss/main.scss */
+/* line 559, ../scss/main.scss */
 textarea {
   background: url(../images/noiseGrey.png) repeat left center #e9e9e9;
   border-style: solid;
@@ -610,7 +617,7 @@ textarea {
   border-width: 3px 0px 0px 2px;
 }
 
-/* line 559, ../scss/main.scss */
+/* line 564, ../scss/main.scss */
 input[type="submit"], button {
   padding: 0.5em 1em;
   border-style: solid;
@@ -625,7 +632,7 @@ input[type="submit"], button {
   margin: 0 0 2px 0;
   vertical-align: top;
 }
-/* line 566, ../scss/main.scss */
+/* line 571, ../scss/main.scss */
 input[type="submit"]:focus, button:focus {
   border-style: solid;
   border-color: #dddddd;
@@ -638,29 +645,29 @@ input[type="submit"]:focus, button:focus {
   margin: 2px 0 0 0;
 }
 
-/* line 572, ../scss/main.scss */
+/* line 577, ../scss/main.scss */
 .admin-form {
   display: block;
   clear: both;
 }
-/* line 576, ../scss/main.scss */
+/* line 581, ../scss/main.scss */
 .admin-form input {
   display: block;
 }
 
-/* line 591, ../scss/main.scss */
+/* line 596, ../scss/main.scss */
 .form-labels {
   width: 320px;
   float: left;
   margin: 20px 0;
 }
-/* line 596, ../scss/main.scss */
+/* line 601, ../scss/main.scss */
 .form-labels > div {
   position: relative;
   overflow: hidden;
   margin: 1em 0;
 }
-/* line 603, ../scss/main.scss */
+/* line 608, ../scss/main.scss */
 .form-labels .labels input, .form-labels .labels textarea {
   width: 100%;
   border-style: solid;
@@ -679,7 +686,7 @@ input[type="submit"]:focus, button:focus {
   padding: 12px;
   outline: 0;
 }
-/* line 614, ../scss/main.scss */
+/* line 619, ../scss/main.scss */
 .form-labels .labels input:focus, .form-labels .labels input:valid, .form-labels .labels textarea:focus, .form-labels .labels textarea:valid {
   border-style: solid;
   border-color: #dddddd;
@@ -691,7 +698,7 @@ input[type="submit"]:focus, button:focus {
   border-width: 2px 2px 2px 2px;
   padding: 4px 6px 20px 6px;
 }
-/* line 619, ../scss/main.scss */
+/* line 624, ../scss/main.scss */
 .form-labels .labels input:focus + label, .form-labels .labels input:valid + label, .form-labels .labels textarea:focus + label, .form-labels .labels textarea:valid + label {
   background: url(../images/noiseGreyDark.png) repeat left center #dddddd;
   color: white;
@@ -702,7 +709,7 @@ input[type="submit"]:focus, button:focus {
   top: 100%;
   margin-top: -16px;
 }
-/* line 630, ../scss/main.scss */
+/* line 635, ../scss/main.scss */
 .form-labels .labels input:focus, .form-labels .labels textarea:focus {
   border-style: solid;
   border-color: #25bfff;
@@ -713,11 +720,11 @@ input[type="submit"]:focus, button:focus {
   border-image: url(../images/noiseBlue.png) 2 2 2 2 repeat repeat;
   border-width: 2px 2px 2px 2px;
 }
-/* line 634, ../scss/main.scss */
+/* line 639, ../scss/main.scss */
 .form-labels .labels input:focus + label, .form-labels .labels textarea:focus + label {
   background: url(../images/noiseBlue.png) repeat left center #25bfff;
 }
-/* line 639, ../scss/main.scss */
+/* line 644, ../scss/main.scss */
 .form-labels .labels label {
   transition: background 0.2s, color 0.2s, top 0.2s, bottom 0.2s, right 0.2s, left 0.2s;
   position: absolute;
@@ -729,13 +736,13 @@ input[type="submit"]:focus, button:focus {
   left: 0;
   width: 100%;
 }
-/* line 650, ../scss/main.scss */
+/* line 655, ../scss/main.scss */
 .form-labels .labels textarea {
   display: block;
   resize: vertical;
 }
 
-/* line 657, ../scss/main.scss */
+/* line 662, ../scss/main.scss */
 .money {
   display: inline-block;
   color: #6e6e6e;
