--- a/media/scss/forums.scss
+++ b/media/scss/forums.scss
@@ -122,7 +122,7 @@
               padding: 0.1em 0.5em;
               //background: #2c4b6d;
               @include noise(BlackLight);
-              box-shadow: 0 0 0.25em rgba(#fff, 0.25);
+              //box-shadow: 0 0 0.25em rgba(#fff, 0.25);
               color: #fff;
 
               &:hover {
