--- a/media/scss/forums.scss
+++ b/media/scss/forums.scss
@@ -287,7 +287,7 @@ table.threads {
       @include noise(GreyDark);
     }
 
-    &.closed .title span a:after {
+    &.closed .title span a:first-child:after {
       content: " " url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAKAQMAAACzCY3DAAAABlBMVEV1dXV1dXWzRrgXAAAAAXRSTlMAQObYZgAAAB9JREFUeF4VxTERAAAIxLAKY0IYdl8GlMsQitYqz+cAOx4G8egZFEcAAAAASUVORK5CYII=');
     }
 
@@ -311,7 +311,7 @@ table.threads {
         @include noise("Beige");
       }
 
-      .title span a:before {
+      .title span a:first-child:before {
         content: 'Sticky: ';
         font-weight: bold;
         text-transform: uppercase;
