--- a/media/scss/servers.scss
+++ b/media/scss/servers.scss
@@ -59,7 +59,9 @@ $green: #b9d44d;
       color: #fff;
       //background: $blue;
       font-family: 'Arvil Sans', Arial;
-      font-size: 1.7em;
+      //font-size: 1.7em;
+      font-size: 1.25em;
+      line-height: 36px;
       padding: 0.125em 1em;
       //@include border-radius(0.25em);
       letter-spacing: 1px;
