--- a/media/css/forums.css
+++ b/media/css/forums.css
@@ -16,18 +16,19 @@
   border: none;
   margin: 0;
   display: block;
+  clear: both;
 }
 
-/* line 15, ../scss/forums.scss */
+/* line 16, ../scss/forums.scss */
 .page-forum .modDropdown {
   float: right;
 }
-/* line 20, ../scss/forums.scss */
+/* line 21, ../scss/forums.scss */
 .page-forum h2 {
   margin: 0;
 }
 
-/* line 27, ../scss/forums.scss */
+/* line 28, ../scss/forums.scss */
 .table.subforums .row {
   background: #3b3b3b;
   color: #aaa;
@@ -43,7 +44,7 @@
   display: -webkit-flex;
   display: flex;
 }
-/* line 43, ../scss/forums.scss */
+/* line 44, ../scss/forums.scss */
 .table.subforums .row:before {
   content: '';
   display: block;
@@ -53,7 +54,7 @@
   left: 7px;
   width: 10px;
 }
-/* line 53, ../scss/forums.scss */
+/* line 54, ../scss/forums.scss */
 .table.subforums .row.head {
   border-style: solid;
   -moz-border-image: url(../images/noiseDivider.png) 0 0 2 0 repeat repeat;
@@ -71,26 +72,26 @@
   font-weight: bold;
   text-align: left;
 }
-/* line 64, ../scss/forums.scss */
+/* line 65, ../scss/forums.scss */
 .table.subforums .row.head .cell {
   padding: 0;
 }
-/* line 67, ../scss/forums.scss */
+/* line 68, ../scss/forums.scss */
 .table.subforums .row.head .cell + .cell {
   float: right;
   width: 200px;
 }
-/* line 75, ../scss/forums.scss */
+/* line 76, ../scss/forums.scss */
 .table.subforums .row .cell {
   display: inline-block;
   padding: 4px 0;
 }
-/* line 79, ../scss/forums.scss */
+/* line 80, ../scss/forums.scss */
 .table.subforums .row .cell.noSubforums {
   margin-top: 8px;
   line-height: 1.2;
 }
-/* line 84, ../scss/forums.scss */
+/* line 85, ../scss/forums.scss */
 .table.subforums .row .cell.forumInfo {
   float: left;
   text-align: left;
@@ -101,24 +102,24 @@
   -ms-flex: 2;
   flex: 2;
 }
-/* line 90, ../scss/forums.scss */
+/* line 91, ../scss/forums.scss */
 .table.subforums .row .cell.forumInfo .forumName, .table.subforums .row .cell.forumInfo .description {
   display: inline-block;
   float: left;
 }
-/* line 95, ../scss/forums.scss */
+/* line 96, ../scss/forums.scss */
 .table.subforums .row .cell.forumInfo .forumName {
   font-size: 14pt;
   font-weight: bold;
   color: #fff;
 }
-/* line 101, ../scss/forums.scss */
+/* line 102, ../scss/forums.scss */
 .table.subforums .row .cell.forumInfo .description {
   font-size: 0.85em;
   clear: left;
   margin: 4px 0 0 0;
 }
-/* line 107, ../scss/forums.scss */
+/* line 108, ../scss/forums.scss */
 .table.subforums .row .cell.forumInfo ul.subforums {
   display: inline-block;
   list-style: none;
@@ -129,22 +130,22 @@
   line-height: 1.0;
   font-size: 0.8em;
 }
-/* line 117, ../scss/forums.scss */
+/* line 118, ../scss/forums.scss */
 .table.subforums .row .cell.forumInfo ul.subforums li {
   display: inline-block;
 }
-/* line 120, ../scss/forums.scss */
+/* line 121, ../scss/forums.scss */
 .table.subforums .row .cell.forumInfo ul.subforums li a {
   display: inline-block;
   padding: 0.1em 0.5em;
   background: url(../images/noiseBlackLight.png) repeat left center #636363;
   color: #fff;
 }
-/* line 128, ../scss/forums.scss */
+/* line 129, ../scss/forums.scss */
 .table.subforums .row .cell.forumInfo ul.subforums li a:hover {
   text-decoration: none;
 }
-/* line 136, ../scss/forums.scss */
+/* line 137, ../scss/forums.scss */
 .table.subforums .row .cell.postCount {
   line-height: 52px;
   vertical-align: top;
@@ -155,7 +156,7 @@
   -ms-flex: 1;
   flex: 1;
 }
-/* line 143, ../scss/forums.scss */
+/* line 144, ../scss/forums.scss */
 .table.subforums .row .cell.lastPostInfo {
   text-align: left;
   display: inline-block;
@@ -170,7 +171,7 @@
   -ms-flex: 1;
   flex: 1;
 }
-/* line 156, ../scss/forums.scss */
+/* line 157, ../scss/forums.scss */
 .table.subforums .row .cell.lastPostInfo .avatar {
   vertical-align: top;
   width: 46px;
@@ -178,31 +179,31 @@
   vertical-align: middle;
   outline: 2px solid #bebebe;
 }
-/* line 165, ../scss/forums.scss */
+/* line 166, ../scss/forums.scss */
 .table.subforums .row .cell.lastPostInfo .subPostInfo {
   display: inline-block;
   vertical-align: middle;
   font-size: 1.2em;
 }
-/* line 171, ../scss/forums.scss */
+/* line 172, ../scss/forums.scss */
 .table.subforums .row .cell.lastPostInfo .timestamp, .table.subforums .row .cell.lastPostInfo .userLink, .table.subforums .row .cell.lastPostInfo .viewLink {
   display: block;
   font-size: 0.65em;
 }
-/* line 176, ../scss/forums.scss */
+/* line 177, ../scss/forums.scss */
 .table.subforums .row .cell.lastPostInfo .timestamp {
   color: #929292;
 }
-/* line 179, ../scss/forums.scss */
+/* line 180, ../scss/forums.scss */
 .table.subforums .row .cell.lastPostInfo .userLink {
   color: #4b4b4b;
   font-weight: bold;
 }
-/* line 183, ../scss/forums.scss */
+/* line 184, ../scss/forums.scss */
 .table.subforums .row .cell.lastPostInfo .viewLink {
   color: #25bfff;
 }
-/* line 193, ../scss/forums.scss */
+/* line 194, ../scss/forums.scss */
 .table.subforums .row.forumNew:before {
   background: url(../images/noiseBlue.png) repeat left center #25bfff;
   border-style: solid;
@@ -214,7 +215,7 @@
   border-image: url(../images/noiseWhite.png) 3 2 3 2 repeat repeat;
   border-width: 3px 2px 3px 2px;
 }
-/* line 200, ../scss/forums.scss */
+/* line 201, ../scss/forums.scss */
 .table.subforums .row.forumSeen:before {
   background: url(../images/noiseGreyDark.png) repeat left center #dddddd;
   border-style: solid;
@@ -227,17 +228,17 @@
   border-width: 3px 2px 3px 2px;
 }
 
-/* line 208, ../scss/forums.scss */
+/* line 209, ../scss/forums.scss */
 table.threads {
   width: 100%;
   border-collapse: collapse;
   position: relative;
 }
-/* line 213, ../scss/forums.scss */
+/* line 214, ../scss/forums.scss */
 table.threads .pageNav {
   float: right;
 }
-/* line 217, ../scss/forums.scss */
+/* line 218, ../scss/forums.scss */
 table.threads tr {
   color: #515151;
   height: 40px;
@@ -252,27 +253,27 @@ table.threads tr {
   border-image: url(../images/noiseGreyMedium.png) 7 0 0 0 repeat repeat;
   border-width: 7px 0px 0px 0px;
 }
-/* line 225, ../scss/forums.scss */
+/* line 226, ../scss/forums.scss */
 table.threads tr:hover {
   background: url(../images/noiseGreyDark.png) repeat left center #dddddd;
 }
-/* line 229, ../scss/forums.scss */
+/* line 230, ../scss/forums.scss */
 table.threads tr td {
   padding-top: 4px;
   padding-bottom: 4px;
 }
-/* line 234, ../scss/forums.scss */
+/* line 235, ../scss/forums.scss */
 table.threads tr .title {
   padding-left: 24px;
   font-size: 1.25em;
 }
-/* line 238, ../scss/forums.scss */
+/* line 239, ../scss/forums.scss */
 table.threads tr .title span {
   max-width: 275px;
   display: inline-block;
   position: relative;
 }
-/* line 243, ../scss/forums.scss */
+/* line 244, ../scss/forums.scss */
 table.threads tr .title span:before {
   content: '';
   position: absolute;
@@ -290,86 +291,86 @@ table.threads tr .title span:before {
   border-image: url(../images/noiseWhite.png) 3 2 3 2 repeat repeat;
   border-width: 3px 2px 3px 2px;
 }
-/* line 256, ../scss/forums.scss */
+/* line 257, ../scss/forums.scss */
 table.threads tr .title .pageNav {
   float: none;
   margin: 0;
   line-height: 1;
 }
-/* line 261, ../scss/forums.scss */
+/* line 262, ../scss/forums.scss */
 table.threads tr .title .pageNav:before {
   content: 'Pages: ';
   font-size: 0.8em;
   white-space: pre;
 }
-/* line 267, ../scss/forums.scss */
+/* line 268, ../scss/forums.scss */
 table.threads tr .title .pageNav li {
   padding: 0;
 }
-/* line 270, ../scss/forums.scss */
+/* line 271, ../scss/forums.scss */
 table.threads tr .title .pageNav li a {
   padding: 0.25em 0.5em;
 }
-/* line 273, ../scss/forums.scss */
+/* line 274, ../scss/forums.scss */
 table.threads tr .title .pageNav li a:before, table.threads tr .title .pageNav li a:after {
   content: '' !important;
 }
-/* line 282, ../scss/forums.scss */
+/* line 283, ../scss/forums.scss */
 table.threads tr.threadNew .title span:before {
   background: url(../images/noiseBlue.png) repeat left center #25bfff;
 }
-/* line 286, ../scss/forums.scss */
+/* line 287, ../scss/forums.scss */
 table.threads tr.threadSeen .title span:before {
   background: url(../images/noiseGreyDark.png) repeat left center #dddddd;
 }
-/* line 290, ../scss/forums.scss */
+/* line 291, ../scss/forums.scss */
 table.threads tr.closed .title span a:first-child:after {
   content: " " url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAKAQMAAACzCY3DAAAABlBMVEV1dXV1dXWzRrgXAAAAAXRSTlMAQObYZgAAAB9JREFUeF4VxTERAAAIxLAKY0IYdl8GlMsQitYqz+cAOx4G8egZFEcAAAAASUVORK5CYII=");
 }
-/* line 297, ../scss/forums.scss */
+/* line 298, ../scss/forums.scss */
 table.threads tr.closed .title span a:first-child:before {
   content: 'Locked: ';
   font-weight: bold;
   text-transform: uppercase;
 }
-/* line 304, ../scss/forums.scss */
+/* line 305, ../scss/forums.scss */
 table.threads tr.sticky {
   background: url(../images/noiseBeigeLight.png) repeat left center #fff5c4;
 }
-/* line 309, ../scss/forums.scss */
+/* line 310, ../scss/forums.scss */
 table.threads tr.sticky:hover {
   background: url(../images/noiseBeige.png) repeat left center #f1e8b9;
 }
-/* line 314, ../scss/forums.scss */
+/* line 315, ../scss/forums.scss */
 table.threads tr.sticky .title span a:first-child:before {
   content: 'Sticky: ';
   font-weight: bold;
   text-transform: uppercase;
 }
-/* line 321, ../scss/forums.scss */
+/* line 322, ../scss/forums.scss */
 table.threads tr a {
   color: #515151;
 }
-/* line 325, ../scss/forums.scss */
+/* line 326, ../scss/forums.scss */
 table.threads tr a.userLink {
   color: #25bfff;
   font-weight: bold;
 }
-/* line 335, ../scss/forums.scss */
+/* line 336, ../scss/forums.scss */
 table.threads thead tr {
   background: transparent;
   border-width: 0;
 }
-/* line 339, ../scss/forums.scss */
+/* line 340, ../scss/forums.scss */
 table.threads thead tr:hover {
   background: transparent;
 }
-/* line 344, ../scss/forums.scss */
+/* line 345, ../scss/forums.scss */
 table.threads thead th {
   color: #494949;
   padding: 0;
 }
-/* line 348, ../scss/forums.scss */
+/* line 349, ../scss/forums.scss */
 table.threads thead th.pageNav {
   vertical-align: bottom;
   font-weight: normal;
@@ -378,7 +379,7 @@ table.threads thead th.pageNav {
   margin: 0;
   font-size: 1.2em;
 }
-/* line 359, ../scss/forums.scss */
+/* line 360, ../scss/forums.scss */
 table.threads thead:after {
   content: '';
   height: 2px;
@@ -393,16 +394,16 @@ table.threads thead:after {
   -o-transform: translateY(-8px);
   transform: translateY(-8px);
 }
-/* line 372, ../scss/forums.scss */
+/* line 373, ../scss/forums.scss */
 table.threads tbody tr:first-of-type {
   border-width: 0;
 }
 
-/* line 379, ../scss/forums.scss */
+/* line 380, ../scss/forums.scss */
 .onlineUsers {
   padding: 1em 0 0 0;
 }
-/* line 387, ../scss/forums.scss */
+/* line 388, ../scss/forums.scss */
 .onlineUsers .userLink {
   display: inline-block;
   margin: 0 0.5em 0.5em 0;
