--- a/media/scss/stats.scss
+++ b/media/scss/stats.scss
@@ -30,6 +30,7 @@ table.stats {
     a {
       display: inline-block;
       vertical-align: middle;
+      font-weight: bold;
     }
 
     .avatar {
@@ -41,6 +42,10 @@ table.stats {
 
   td, th {
     padding: 0.5em 1em;
+  }
+
+  th a {
+    color: #fff;
   }
 
   td.recordTime {
