--- a/media/scss/sprites.scss
+++ b/media/scss/sprites.scss
@@ -142,3 +142,10 @@ $main-default-size: 32px;
   }
 
 }
+
+.tabItem[data-tab="sa"] {
+  dt.sprite:nth-child(n+2):before {
+    @extend %star;
+    top: 5px;
+  }
+}
