--- a/media/scss/threads.scss
+++ b/media/scss/threads.scss
@@ -203,7 +203,8 @@ h2.threadTitle {
   //overflow-x: auto;
   font-family: Helvetica;
   color: #333;
-  text-align: justify;
+  //text-align: justify;
+  text-align: left;
 
   //&.expanded {
   //  overflow-x: initial;
