--- a/media/scss/_base.scss
+++ b/media/scss/_base.scss
@@ -104,4 +104,6 @@ $indent-amount: 30px;
 @import "animation";
 // Import our custom mixins last.
 
-@import "compass/typography/text/force-wrap";
+
+// dont use this; it breaks tabs
+//@import "compass/typography/text/force-wrap";
